--- a/2017/01/financial-aid/css/style.css
+++ b/2017/01/financial-aid/css/style.css
@@ -63,24 +63,22 @@ tbody>tr>th {
   font-weight: 200;
   border-top: none !important;
 }
-th {
+th:not(.name):not(.value) {
   text-align: center;
 }
 
-td {
+td:not(.name):not(.value) {
   border: 10px solid transparent;
   padding: 25px;
   text-align: center;
   color: #888888;
-}
-td {
   position: relative;
   font-size: 22px;
   top: 20px;
+  line-height: .9;
 }
 td small {
   position: relative;
-  top: -15px;
   font-size: 14px;
 }
 
@@ -89,9 +87,11 @@ p {
 }
 
 em {
-  font-weight: 400
+  font-weight: 600
 }
-
+span.light {
+  color: #888888;
+}
 large {
   font-size: 36px;
   font-weight: 600;
@@ -101,10 +101,13 @@ large {
   color: #5d9e7e;
 }
 
-large:.light {
+large.light {
   color: #9dbda9;
 }
-
+.c3 text {
+  font-family: 'brandon-grotesque', helvetica, sans-serif;
+  font-size: 120%;
+}
 .brown-bg {
   background: linear-gradient(
       rgba(255, 255, 255, 0.9),
@@ -184,3 +187,108 @@ large:.light {
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+/* ai2html  */
+
+.g-artboard {
+  margin:0 auto;
+}
+
+#g-SRFS-Packet-Artboard_1{
+  position:relative;
+  overflow:hidden;
+}
+.g-aiAbs{
+  position:absolute;
+}
+.g-aiImg{
+  display:block;
+  width:100% !important;
+}
+#g-SRFS-Packet-Artboard_1 p{
+  font-family: 'brandon-grotesque', helvetica, sans-serif;
+  font-size:13px;
+  line-height:18px;
+  margin:0;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle0 {
+  font-size:28px;
+  line-height:37px;
+  text-align:center;
+  color:#4d4d4d;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle1 {
+  font-size:18px;
+  line-height:23px;
+  text-align:center;
+  color:#4d4d4d;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle2 {
+  font-size:28px;
+  line-height:37px;
+  text-align:center;
+  color:#ffffff;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle3 {
+  font-size:28px;
+  line-height:23px;
+  text-align:center;
+  color:#ffffff;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle4 {
+  font-size:58px;
+  line-height:73px;
+  color:#ffffff;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle5 {
+  font-size:35px;
+  line-height:45px;
+  color:#ffffff;
+}
+#g-SRFS-Packet-Artboard_1 .g-aiPstyle6 {
+  font-size:32px;
+  line-height:41px;
+  text-align:center;
+  color:#4d4d4d;
+}
+.g-aiPtransformed p { white-space: nowrap; }
+
+/*sfrs bar chart*/
+#g-SRFS-Packet-Median_Aid_Package{
+  position:relative;
+  overflow:hidden;
+}
+.g-aiAbs{
+  position:absolute;
+}
+.g-aiImg{
+  display:block;
+  width:100% !important;
+}
+#g-SRFS-Packet-Median_Aid_Package p{
+  font-family: 'brandon-grotesque', helvetica, sans-serif;
+  line-height:1vw;
+  margin:0;
+}
+#g-SRFS-Packet-Median_Aid_Package .g-aiPstyle0 {
+  font-size:1vw;
+  line-height:32px;
+  color:#4d4d4d;
+}
+#g-SRFS-Packet-Median_Aid_Package .g-aiPstyle1 {
+  font-size:1.2vw;
+  line-height:29px;
+  color:#4d4d4d;
+}
+#g-SRFS-Packet-Median_Aid_Package .g-aiPstyle2 {
+  font-size:1.2vw;
+  line-height:29px;
+  text-align:right;
+  color:#4d4d4d;
+}
+#g-SRFS-Packet-Median_Aid_Package .g-aiPstyle3 {
+  font-size:1.2vw;
+  line-height:22px;
+  color:#5d5d5d;
+}
+.g-aiPtransformed p { white-space: nowrap; }
