--- a/2017/01/financial-aid/css/style.css
+++ b/2017/01/financial-aid/css/style.css
@@ -61,21 +61,26 @@ body {
 tbody>tr>th {
   color: #b8b7b7;
   font-weight: 200;
-  border-top: none !important;
 }
 th:not(.name):not(.value) {
   text-align: center;
 }
-
+.table>tbody>tr {
+  border-bottom: none;
+  border-top: none;
+}
 td:not(.name):not(.value) {
-  border: 10px solid transparent;
-  padding: 25px;
+  padding: 22px;
   text-align: center;
   color: #888888;
   position: relative;
   font-size: 22px;
-  top: 20px;
   line-height: .9;
+  border-right: 1px solid #888;
+}
+
+td:last-of-type, td.no-border {
+  border-right: none !important;
 }
 td small {
   position: relative;
@@ -92,6 +97,15 @@ em {
 span.light {
   color: #888888;
 }
+nav img {
+  padding-top: 12px;
+}
+a {
+  color: #5d9e7e;
+}
+a:hover {
+  color: #9dbda9;
+}
 large {
   font-size: 36px;
   font-weight: 600;
@@ -107,6 +121,9 @@ large.light {
 .c3 text {
   font-family: 'brandon-grotesque', helvetica, sans-serif;
   font-size: 120%;
+}
+.container:first-of-type {
+  padding-top: 70px;
 }
 .brown-bg {
   background: linear-gradient(
@@ -207,47 +224,43 @@ large.light {
 }
 #g-SRFS-Packet-Artboard_1 p{
   font-family: 'brandon-grotesque', helvetica, sans-serif;
-  font-size:13px;
+  font-size:10px;
   line-height:18px;
   margin:0;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle0 {
-  font-size:28px;
+  font-size:16px;
   line-height:37px;
   text-align:center;
   color:#4d4d4d;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle1 {
-  font-size:18px;
+  font-size:16px;
   line-height:23px;
   text-align:center;
   color:#4d4d4d;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle2 {
-  font-size:28px;
+  font-size:20px;
   line-height:37px;
   text-align:center;
   color:#ffffff;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle3 {
-  font-size:28px;
-  line-height:23px;
+  font-size:16px;
   text-align:center;
   color:#ffffff;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle4 {
-  font-size:58px;
-  line-height:73px;
+  font-size:40px;
   color:#ffffff;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle5 {
-  font-size:35px;
-  line-height:45px;
+  font-size:40px;
   color:#ffffff;
 }
 #g-SRFS-Packet-Artboard_1 .g-aiPstyle6 {
-  font-size:32px;
-  line-height:41px;
+  font-size:20px;
   text-align:center;
   color:#4d4d4d;
 }
@@ -256,7 +269,6 @@ large.light {
 /*sfrs bar chart*/
 #g-SRFS-Packet-Median_Aid_Package{
   position:relative;
-  overflow:hidden;
 }
 .g-aiAbs{
   position:absolute;
@@ -267,28 +279,50 @@ large.light {
 }
 #g-SRFS-Packet-Median_Aid_Package p{
   font-family: 'brandon-grotesque', helvetica, sans-serif;
-  line-height:1vw;
+  font-size:10px;
+  line-height:18px;
   margin:0;
 }
 #g-SRFS-Packet-Median_Aid_Package .g-aiPstyle0 {
-  font-size:1vw;
+  font-size:20px;
   line-height:32px;
   color:#4d4d4d;
 }
 #g-SRFS-Packet-Median_Aid_Package .g-aiPstyle1 {
-  font-size:1.2vw;
+  font-size:20px;
   line-height:29px;
   color:#4d4d4d;
 }
 #g-SRFS-Packet-Median_Aid_Package .g-aiPstyle2 {
-  font-size:1.2vw;
+  font-size:20px;
   line-height:29px;
   text-align:right;
   color:#4d4d4d;
 }
 #g-SRFS-Packet-Median_Aid_Package .g-aiPstyle3 {
-  font-size:1.2vw;
+  font-size:18px;
   line-height:22px;
   color:#5d5d5d;
 }
 .g-aiPtransformed p { white-space: nowrap; }
+
+@media screen and (max-width: 767px) {
+  td:not(.name):not(.value) {
+    /*border: 2px solid transparent;*/
+    padding: 3px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+#g-SRFS-Packet-Median_Aid_Package [class*="g-aiPstyl"] {
+    font-size: 70%;
+  }
+
+  #g-SRFS-Packet-Artboard_1 [class*="g-aiPstyle"] {
+    font-size: 70%;
+  }
+  .col-sm-4.text-right {
+    text-align: left;
+  }
+}
