--- a/2017/01/financial-aid/css/style.css
+++ b/2017/01/financial-aid/css/style.css
@@ -322,7 +322,7 @@ large.light {
   #g-SRFS-Packet-Artboard_1 [class*="g-aiPstyle"] {
     font-size: 70%;
   }
-  .col-sm-4.text-right, .col-sm-4.text-left {
+  .col-sm-4.text-right, .col-sm-4.text-left, .col-sm-2.text-left {
     text-align: center;
   }
 }
