--- a/2017/03/penn-bracket/css/style.css
+++ b/2017/03/penn-bracket/css/style.css
@@ -12,7 +12,6 @@
   font-style: normal;
 }
 
-
 /*BRACKETR STYLING*/
 
 div.jQBracket .round {
@@ -54,7 +53,7 @@ div.jQBracket .connector, div.jQBracket .connector div.connector, div.jQBracket 
 }
 
 div.jQBracket .team.highlight:not(.na) .label {
-  background-color: #aa1e22 !important;
+  background-color: #58595B !important;
   color: #fff !important;
 }
 
@@ -145,7 +144,7 @@ body {
 .advert {
   width: 300px;
   height: 250px;
-  border: 2px solid #FFD6A1;
+  border: 4px solid #FFD6A1;
   display: inline-block;
   margin: 5px;
 }
@@ -153,7 +152,7 @@ body {
 footer {
   text-align: center;
   border-top: 2px solid #fff;
-  padding: 15px;
+  padding: 5px;
 }
 
 @media screen and (max-width: 1400px) {
