--- a/2017/04/best-of-penn/css/master.css
+++ b/2017/04/best-of-penn/css/master.css
@@ -34,24 +34,53 @@
 }
 
 body {
+  font-family: 'PT Serif', serif;
+  font-size: 18px;
+}
+
+header, footer, h1, h2, h3, h4, h5, h6 {
   font-family: 'Gilroy';
+}
+
+address {
+  color: #7c7c7c;
+  font-style: italic;
+}
+
+hr {
+  width: 100%;
+  height: 4px;
+  width: 90%;
+  margin: 35px;
+  background-color: #5C91CA;
+  position: relative;
+  top: 15px;
 }
 
 h2 {
   font-weight: 600;
-  padding-top: 25px;
   padding-bottom: 5px;
 }
 
-h2 span {
+h3 {
+  padding-top: 25px;
   font-weight: 200;
+  display: block;
+  font-size: 2rem;
 }
+h2 span {
+  display: block;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #5C91CA;
+}
+
+p:not(:first-of-type) {
+  font-size: 80%;
+}
+
 
 .img-fluid {
   width: 100%;
-}
-
-.row:not(:last-child) {
-  padding-bottom: 25px;
-  border-bottom: 10px solid blue;
 }
