--- a/2017/04/best-of-penn/css/master.css
+++ b/2017/04/best-of-penn/css/master.css
@@ -102,6 +102,12 @@ figcaption {
   font-size: 12px;
 }
 
+nav {
+  position: fixed;
+  /*text-align: center;*/
+  /*margin: auto;*/
+}
+
 .img-fluid {
   width: 100%;
 }
