--- a/2017/04/sports-end-of-year-awards/style.css
+++ b/2017/04/sports-end-of-year-awards/style.css
@@ -1,101 +1,3 @@
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-black.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-black.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-black.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-blackitalic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-blackitalic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-blackitalic.ttf') format('truetype');
-    font-weight: 800;
-    font-style: italic;;
-
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-bold.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-bold.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-bold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-bolditalic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-bolditalic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-bolditalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-italic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-italic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-italic.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-light.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-light.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-light.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-lightitalic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-lightitalic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-lightitalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-medium.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-medium.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-mediumitalic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-mediumitalic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-mediumitalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-regular.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-regular.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-thin.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-thin.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Azo Sans';
-    src: url('./font/rui_abreu_-_azosans-thinitalic.woff2') format('woff2'),
-         url('./font/rui_abreu_-_azosans-thinitalic.woff') format('woff'),
-         url('./font/rui_abreu_-_azosans-thinitalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
-}
 header {
   position: fixed;
   width: 100%;
@@ -147,12 +49,17 @@ a {
 }
 
 h1, h2, h3, h4 {
-  font-family: "Azo Sans", arial, tahoma, verdana;
+  font-family: "Neuzeit-Grotesk", arial, tahoma, verdana;
   font-weight: 600;
 }
 
+h1 {
+  font-size: 50px;
+  line-height: 110%;
+}
+
 .project-name {
-  font-family: "Azo Sans", arial, tahoma, verdana;
+  font-family: "Neuzeit-Grotesk", arial, tahoma, verdana;
   font-weight: 800;
   text-align: center;
   padding: 10px 0;
