add blurbs for graphics

--- a/2017/04/jobs-after-graduation/style.css
+++ b/2017/04/jobs-after-graduation/style.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 92px;
 }
 
 h2 {
@@ -30,10 +30,27 @@ a:hover, a:active, a:focus {
   color: rgb(59, 157, 161)
 }
 
-hr {
-  padding: 20px;
-}
-
 footer > hr {
   padding: 5px;
+}
+
+.col-sm-6, .col-sm-12 {
+  padding-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .col-sm-6, .col-sm-8 {
+    border-bottom: 1px solid #EEE;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+  .col-sm-12 {
+    padding-top: 20px;
+    padding-bottom: 0px;
+  }
+
+  .col-sm-8:last-of-type {
+    border-bottom: none;
+  }
 }
