--- a/2017/09/mental-health/style.css
+++ b/2017/09/mental-health/style.css
@@ -30,12 +30,27 @@ a:hover.article h4, a:active.article h4 {
   color: #888;
 }
 
+a:hover.article h3, a:active.article h3 {
+  text-decoration: none;
+  color: #888;
+}
+
 h1 {
   font-size: 70px;
 }
 
-h2, h4 {
+h2, h3, h4 {
   margin-top: 0;
+}
+
+h3 {
+  font-weight: 700;
+}
+
+p {
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 16px;
 }
 
 .navbar {
@@ -62,17 +77,19 @@ h2, h4 {
   width: 33%;
   padding-left: 10px;
   padding-right: 10px;
-  flex-grow: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
 .article.last {
-  flex-grow: 0;
+  flex: 0 0 33%;
+  padding-right: 5px;
+  margin-right: 4px;
 }
 
 .resources {
-  flex-grow: 2;
+  flex: 2 0 66%;
 }
 
 .panel {
@@ -88,7 +105,14 @@ h2, h4 {
 @media only screen and (max-width: 768px) {
   .article {
     width: 100%;
+    flex: none;
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .article.last {
+    flex: none;
+    padding-right: 0;
+    margin-right: 0;
   }
 }
