added the new background, still need to add clouds

--- a/2017/10/housing-guide/css/style.css
+++ b/2017/10/housing-guide/css/style.css
@@ -201,12 +201,12 @@ section {
 }
 
 #hero {
-	background: url(../img/town.png) no-repeat center bottom fixed; 
+	background: url(../img/bg.svg) no-repeat center bottom fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	height: 100%;
+	height: 100vh;
 	min-height: 700px;
 }
 
